--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icon": "^1.0.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
